# llm-orchestrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _test_service_smoke.py  llm-orchestrate  models.json  pyproject.toml  setup.sh
docs/: API.md  ARCHITECTURE.md
llm_orchestrator/: __init__.py  advisor.py  cli.py  config.py  environment.py  history.py  model_discovery.py  monitor.py  orchestrator.py  planner.py  profiles.py  service.py  stack.py
tests/: __init__.py  test_advisor.py  test_cli.py  test_config.py  test_environment.py  test_history.py  test_model_discovery.py  test_monitor.py  test_orchestrator.py  test_planner.py  test_profiles.py  test_service.py  test_stack.py
